[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jonathan Pallant <github@thejpster.org.uk>",
    "Jorge Aparicio <jorge@japaric.io>",
    "Kiffie van Haash"
]

description = "A heap allocator for PIC32 controllers"
repository = "https://github.com/kiffie/alloc-pic32"
readme = "README.md"

keywords = [
    "allocator",
    "mips",
    "PIC32",
]
license = "MIT OR Apache-2.0"
name = "alloc-pic32"
version = "0.3.5"

[dependencies]
mips_rt = { git = "https://github.com/kiffie/mcu-rs.git" }

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.1"
